force-app/main/default/objects/Activity/fields/Shift_ID__c.field-meta.xml
<CustomField>
    <fullName>Shift_ID__c</fullName>
    <description>External ID to synchronise events with STM records.</description>
    <externalId>true</externalId>
    <label>Shift ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>